// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GameSettings, Multiplayer 1`] = `
<div
  className="MenuBoard"
>
  <div
    className="MenuTitle"
  >
    <div
      className="MenuTitleWhite"
    >
      Game
    </div>
    <div
      className="MenuTitleRed"
    >
      Settings
    </div>
  </div>
  <div
    className="SettingsRow"
  >
    <div
      className="NameSelect"
    >
      <div
        className="SettingsHeading"
      >
        <div
          className="ButtonCaption"
        >
          Enter Names
        </div>
        <hr
          className="SettingsLine"
        />
      </div>
      <div
        className="goOnlineButton"
        onClick={[Function]}
      >
        <div
          className="ButtonCaption"
        >
          Switch to Online Mode
        </div>
      </div>
      <div
        className="nameZone"
      >
        <input
          className="nameInput form-control"
          defaultValue=""
          onChange={[Function]}
          placeholder="Player 1 Name"
        />
        <input
          className="nameInput form-control"
          defaultValue=""
          onChange={[Function]}
          placeholder="Player 2 Name"
        />
      </div>
    </div>
    <div
      className="SizeSelect"
    >
      <div
        className="SettingsHeading"
      >
        <div
          className="ButtonCaption"
        >
          Board Size
        </div>
        <hr
          className="SettingsLine"
        />
      </div>
      <div
        className="SettingsValueRow"
      >
        <div
          className="UnselectedValue"
          onClick={[Function]}
        >
          6
        </div>
        <div
          className="UnselectedValue"
          onClick={[Function]}
        >
          7
        </div>
        <div
          className="UnselectedValue"
          onClick={[Function]}
        >
          8
        </div>
      </div>
    </div>
  </div>
  <div
    className="SettingsButtonRow"
  >
    <div
      className="BackButtonYellow"
      onClick={[Function]}
    >
      <div
        className="ButtonCaption"
      >
        Back
      </div>
    </div>
    <div
      className="BackButtonGreen"
      onClick={[Function]}
    >
      <div
        className="ButtonCaption"
      >
        Start
      </div>
    </div>
  </div>
</div>
`;

exports[`GameSettings, Single Player 1`] = `
<div
  className="MenuBoard"
>
  <div
    className="MenuTitle"
  >
    <div
      className="MenuTitleWhite"
    >
      Game
    </div>
    <div
      className="MenuTitleRed"
    >
      Settings
    </div>
  </div>
  <div
    className="SettingsRow"
  >
    <div
      className="DifficultySelect"
    >
      <div
        className="SettingsHeading"
      >
        <div
          className="ButtonCaption"
        >
          Difficulty
        </div>
        <hr
          className="SettingsLine"
        />
      </div>
      <div
        className="SettingsValueRow"
      >
        <div
          className="UnselectedValue"
          onClick={[Function]}
        >
          1
        </div>
        <div
          className="UnselectedValue"
          onClick={[Function]}
        >
          2
        </div>
        <div
          className="UnselectedValue"
          onClick={[Function]}
        >
          3
        </div>
        <div
          className="UnselectedValue"
          onClick={[Function]}
        >
          4
        </div>
        <div
          className="UnselectedValue"
          onClick={[Function]}
        >
          5
        </div>
      </div>
      <div
        className="SettingsValueRow"
      >
        <div
          className="UnselectedValue"
          onClick={[Function]}
        >
          6
        </div>
        <div
          className="UnselectedValue"
          onClick={[Function]}
        >
          7
        </div>
        <div
          className="UnselectedValue"
          onClick={[Function]}
        >
          8
        </div>
        <div
          className="UnselectedValue"
          onClick={[Function]}
        >
          9
        </div>
      </div>
    </div>
    <div
      className="SizeSelect"
    >
      <div
        className="SettingsHeading"
      >
        <div
          className="ButtonCaption"
        >
          Board Size
        </div>
        <hr
          className="SettingsLine"
        />
      </div>
      <div
        className="SettingsValueRow"
      >
        <div
          className="UnselectedValue"
          onClick={[Function]}
        >
          6
        </div>
        <div
          className="UnselectedValue"
          onClick={[Function]}
        >
          7
        </div>
        <div
          className="UnselectedValue"
          onClick={[Function]}
        >
          8
        </div>
      </div>
    </div>
  </div>
  <div
    className="SettingsButtonRow"
  >
    <div
      className="BackButtonYellow"
      onClick={[Function]}
    >
      <div
        className="ButtonCaption"
      >
        Back
      </div>
    </div>
    <div
      className="BackButtonGreen"
      onClick={[Function]}
    >
      <div
        className="ButtonCaption"
      >
        Start
      </div>
    </div>
  </div>
</div>
`;

exports[`GameSettings, null 1`] = `
<div
  className="MenuBoard"
>
  <div
    className="MenuTitle"
  >
    <div
      className="MenuTitleWhite"
    >
      Game
    </div>
    <div
      className="MenuTitleRed"
    >
      Settings
    </div>
  </div>
  <div
    className="SettingsRow"
  >
    <div
      className="NameSelect"
    >
      <div
        className="SettingsHeading"
      >
        <div
          className="ButtonCaption"
        >
          Enter Names
        </div>
        <hr
          className="SettingsLine"
        />
      </div>
      <div
        className="goOnlineButton"
        onClick={[Function]}
      >
        <div
          className="ButtonCaption"
        >
          Switch to Online Mode
        </div>
      </div>
      <div
        className="nameZone"
      >
        <input
          className="nameInput form-control"
          defaultValue=""
          onChange={[Function]}
          placeholder="Player 1 Name"
        />
        <input
          className="nameInput form-control"
          defaultValue=""
          onChange={[Function]}
          placeholder="Player 2 Name"
        />
      </div>
    </div>
    <div
      className="SizeSelect"
    >
      <div
        className="SettingsHeading"
      >
        <div
          className="ButtonCaption"
        >
          Board Size
        </div>
        <hr
          className="SettingsLine"
        />
      </div>
      <div
        className="SettingsValueRow"
      >
        <div
          className="UnselectedValue"
          onClick={[Function]}
        >
          6
        </div>
        <div
          className="UnselectedValue"
          onClick={[Function]}
        >
          7
        </div>
        <div
          className="UnselectedValue"
          onClick={[Function]}
        >
          8
        </div>
      </div>
    </div>
  </div>
  <div
    className="SettingsButtonRow"
  >
    <div
      className="BackButtonYellow"
      onClick={[Function]}
    >
      <div
        className="ButtonCaption"
      >
        Back
      </div>
    </div>
    <div
      className="BackButtonGreen"
      onClick={[Function]}
    >
      <div
        className="ButtonCaption"
      >
        Start
      </div>
    </div>
  </div>
</div>
`;

exports[`GameSettings, renders correctly 1`] = `
<div
  className="MenuBoard"
>
  <div
    className="MenuTitle"
  >
    <div
      className="MenuTitleWhite"
    >
      Game
    </div>
    <div
      className="MenuTitleRed"
    >
      Settings
    </div>
  </div>
  <div
    className="SettingsRow"
  >
    <div
      className="NameSelect"
    >
      <div
        className="SettingsHeading"
      >
        <div
          className="ButtonCaption"
        >
          Enter Names
        </div>
        <hr
          className="SettingsLine"
        />
      </div>
      <div
        className="goOnlineButton"
        onClick={[Function]}
      >
        <div
          className="ButtonCaption"
        >
          Switch to Online Mode
        </div>
      </div>
      <div
        className="nameZone"
      >
        <input
          className="nameInput form-control"
          defaultValue=""
          onChange={[Function]}
          placeholder="Player 1 Name"
        />
        <input
          className="nameInput form-control"
          defaultValue=""
          onChange={[Function]}
          placeholder="Player 2 Name"
        />
      </div>
    </div>
    <div
      className="SizeSelect"
    >
      <div
        className="SettingsHeading"
      >
        <div
          className="ButtonCaption"
        >
          Board Size
        </div>
        <hr
          className="SettingsLine"
        />
      </div>
      <div
        className="SettingsValueRow"
      >
        <div
          className="UnselectedValue"
          onClick={[Function]}
        >
          6
        </div>
        <div
          className="UnselectedValue"
          onClick={[Function]}
        >
          7
        </div>
        <div
          className="UnselectedValue"
          onClick={[Function]}
        >
          8
        </div>
      </div>
    </div>
  </div>
  <div
    className="SettingsButtonRow"
  >
    <div
      className="BackButtonYellow"
      onClick={[Function]}
    >
      <div
        className="ButtonCaption"
      >
        Back
      </div>
    </div>
    <div
      className="BackButtonGreen"
      onClick={[Function]}
    >
      <div
        className="ButtonCaption"
      >
        Start
      </div>
    </div>
  </div>
</div>
`;
